Update row1 index.html and styling in style.css

--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Landing Page</title>
 </head>
 <body>
     <div class="container">
         <div class="header">
-            <h1>Header Logo</h1>
+            <h4>Header Logo</h4>
             <div class="ul">
                 <li>header link one</li>
                 <li>header link two</li>
@@ -18,13 +19,15 @@
         </div>
         <div class="row1">
             <div class="body">
-                <h4>This website is awesome</h4>
+                <h1>This website is awesome</h1>
                 <p>This website has some subtext that goes here under the main title. It's smaller font and the color is lower contrast</p>
                 <div class="button">
                     <button>Sign up</button>
                 </div>
             </div>
-            <div class="placeholder"></div>
+            <div class="placeholder">
+                <p>this is a placeholder for an image</p>
+            </div>
         </div>
     </div>
     <div class="row2">
