--- a/index.html
+++ b/index.html
@@ -32,21 +32,23 @@
     </div>
     <div class="row2">
         <div class="title"><h3>Some random information.</h3></div>
-        <div class="info">
-            <img src="" alt="">
-            <p>this is some subtext under an illustration or image</p>
-        </div>
-        <div class="info">
-            <img src="" alt="">
-            <p>this is some subtext under an illustration or image</p>
-        </div>
-        <div class="info">
-            <img src="" alt="">
-            <p>this is some subtext under an illustration or image</p>
-        </div>
-        <div class="info">
-            <img src="" alt="">
-            <p>this is some subtext under an illustration or image</p>
+        <div class="info-container">
+            <div class="info">
+                <div class="image"></div>
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div class="info">
+                <div class="image"></div>
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div class="info">
+                <div class="image"></div>
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div class="info">
+                <div class="image"></div>
+                <p>this is some subtext under an illustration or image</p>
+            </div>
         </div>
     </div>
     <div class="row3">
