--- a/index.html
+++ b/index.html
@@ -52,11 +52,14 @@
         </div>
     </div>
     <div class="row3">
-        <div class="quote">
-            <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. 
-                Who knows? All I know is that it looks nice.</p>
-            <p>-Thor, God of Thunder</p>
+        <div class="quote-container">
+            <div class="quote">
+                <p><em>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. 
+                    Who knows? All I know is that it looks nice.</em></p>
+            </div>
+            <div class="author"><p><strong>-Thor, God of Thunder</strong></p></div>
         </div>
+        
     </div>
     <div class="row4">
         <div class="shell">
