--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <h1>This website is awesome</h1>
                 <p>This website has some subtext that goes here under the main title. It's smaller font and the color is lower contrast</p>
                 <div class="button">
-                    <button>Sign up</button>
+                    <button class="btn">Sign up</button>
                 </div>
             </div>
             <div class="placeholder">
@@ -64,10 +64,10 @@
     <div class="row4">
         <div class="shell">
             <div class="description">
-                <p>Call to action! It's time!</p>
+                <h4>Call to action! It's time!</h4>
                 <p>Sign up for our product by clicking that button right over there!</p>
             </div>
-            <div class="btn"><button>Sign up</button></div>
+            <div class="button"><button class="btn2">Sign up</button></div>
         </div>
     </div>
     <div class="footer">
